# fastoblig

./: .gitignore  README.md  pyproject.toml
fastoblig/: assessment.py  canvas.py  commands.py  completions.py  domain.py  feedback.py  github.py  main.py  storage.py  utils.py
tests/: test_canvas.py  test_storage.py
